Arreglos en el codigo del header

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -38,7 +40,7 @@
                 <a href="./genres.html" class="controleshijo">GÉNEROS</a>
             </li>
             <li>
-                <a href="./favoritos.html" class="controleshijo">FAVORITOS</a>
+                <a href="./favoritos.html" class="controleshijo">FAVORITOS❤️</a>
             </li>
         </ul>
     </header>
@@ -48,20 +50,21 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href="./detail-movie.html">  <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt=""> </a>
-                
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt=""> </a>
+
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
             </article>
             <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png"
+                        alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html">  <img class="imagen" src="./img/peli1.jpg" alt="">  </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/peli1.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
@@ -73,7 +76,8 @@
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                 </h3>
@@ -84,31 +88,34 @@
         </div>
         <section class="primerasection">
             <article>
-                <img class="imagen" src="./img-series/poster titans.jpg" alt="">
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/poster titans.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Titans</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg"
+                        alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png" alt="">
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png"
+                        alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt="">
+                <a href="./detail-series.html"> <img class="imagen"
+                        src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Gotham</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series/poster-loki.jpg" alt="">
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/poster-loki.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Loki</a>
                 </h3>
@@ -119,31 +126,31 @@
         </div>
         <section class="primerasection">
             <article>
-                <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt="">
+                <a href=""> <img class="imagen" src="./img-series-nuevo/infinitywar.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <a href=""> <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                 </h3>
             </article>
             <article>
-                <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
                 </h3>
