Cambio en el nombre de las peliculas

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=""> </a>
 
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
@@ -64,7 +64,7 @@
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/peli1.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
@@ -88,34 +88,31 @@
         </div>
         <section class="primerasection">
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/poster titans.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/titans.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Titans</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil-serie-tv-cartel.jpg"
-                        alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg"alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/HBO-Watchmen-Poster-Full.png"
-                        alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/Watchmen.png"alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen"
-                        src="./img-series/news-00086600-gotham-season-2-poster.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt=""></a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Gotham</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/poster-loki.jpg" alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Loki</a>
                 </h3>
