Arreglo en las imagenes

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -53,7 +53,7 @@
 
                 <h3 class="titulosdetalles">Avengers:EndGame</h3>
                 <h4 class="duracion">Duración (3h 2m)</h4>
-                <img class="imagen" src="./img/81ai6zx6eXL._AC_SL1304_.jpg" alt="">
+                <img class="imagen" src="./img/AvengersEndgame.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -119,7 +119,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">The Suicide Squad</h3>
                 <h4 class="duracion">Duración (2h 12m)</h4>
-                <img class="imagen" src="./img/peli1.jpg" alt="">
+                <img class="imagen" src="./img/SuicideSquad.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
