Arrglos en las imagenes

--- a/detail-movie.html
+++ b/detail-movie.html
@@ -53,7 +53,7 @@
 
                 <h3 class="titulosdetalles">Avengers:EndGame</h3>
                 <h4 class="duracion">Duración (3h 2m)</h4>
-                <img class="imagen" src="./img/AvengersEndgame.jpg" alt="">
+                <img class="imagen" src="./img/avengersEndgame.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -89,7 +89,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Batman:The Dark Knight</h3>
                 <h4 class="duracion">Duración (2h 32m)</h4>
-                <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
+                <img class="imagen" src="./img/batmanCabalero.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -119,7 +119,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">The Suicide Squad</h3>
                 <h4 class="duracion">Duración (2h 12m)</h4>
-                <img class="imagen" src="./img/SuicideSquad.jpg" alt="">
+                <img class="imagen" src="./img/suicideSquad.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -188,7 +188,7 @@
             <article class="peliculaprincipal">
                 <h3 class="titulosdetalles">Venom</h3>
                 <h4 class="duracion">Duración (2h 20m)</h4>
-                <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <img class="imagen" src="./img/venom.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -279,7 +279,7 @@
                 <h4 class="duracion">
                     Duración (1h 48m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -325,7 +325,7 @@
                 <h4 class="duracion">
                     Duración (2h 6m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -368,7 +368,7 @@
                 <h4 class="duracion">
                     Duración (2h)
                 </h4>
-                <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt="">
+                <img class="imagen" src="./img/justiceLeague.png" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
@@ -417,7 +417,7 @@
                 <h4 class="duracion">
                     Duración (2h 7m)
                 </h4>
-                <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt="">
+                <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt="">
                 <div class="botonfavorito">
                     <div class="letrasfavorito">
                         <a class="favorito" href="./favoritos.html">AÑADIR A FAVORITOS❤️</a>
