--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </h3>
             </article>
             <article class="imagenpp">
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/Batman_el_Caballero_de_la_Noche.png"
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png"
                         alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
@@ -76,7 +76,7 @@
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom-cartel-final-1537282420.jpg" alt="">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="">
                 </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
@@ -100,7 +100,7 @@
                 </h3>
             </article>
             <article>
-                <a href="./detail-series.html"> <img class="imagen" src="./img-series/Watchmen.png"alt=""> </a>
+                <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png"alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
@@ -129,25 +129,25 @@
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/DeadPool.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/Iron Man.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                 </h3>
             </article>
             <article>
-                <a href=""> <img class="imagen" src="./img/Justice_League_-_Póster_con_Superman.png" alt=""> </a>
+                <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                 </h3>
             </article>
             <article>
-                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/Spiderman 2.jpg" alt=""> </a>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
                 </h3>
