pequeños cambios en css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="./genres.html" class="controleshijo">GÉNEROS</a>
             </li>
             <li>
-                <a href="./favoritos.html" class="controleshijo">FAVORITOS❤️</a>
+                <a href="./favoritos.html" class="controleshijo">FAVORITOS</a>
             </li>
         </ul>
     </header>
