--- a/favoritos.html
+++ b/favoritos.html
@@ -38,7 +38,7 @@
                 <a href="./genres.html" class="controleshijo">GÉNEROS</a>
             </li>
             <li>
-                <a href="./favoritos.html" class="controleshijo">FAVORITOS❤️</a>
+                <a href="./favoritos.html" class="controleshijo">FAVORITOS</a>
             </li>
         </ul>
     </header>
