haciendo cambios en favoritos

--- a/favoritos.html
+++ b/favoritos.html
@@ -42,46 +42,49 @@
             </li>
         </ul>
     </header>
-    <main>
-        <h2>FAVORITOS</h2>
-        <section>
-            <h3>Agregados Recientemente</h3>
-            <ul>
-                <li>
-                    <img src="./img/Batman_el_Caballero_de_la_Noche.png" alt="">
-                    <h4>
-                        <a href="./detail-movie.html">The Dark Knight</a>
-                    </h4>
-                </li>
-                <li>
-                    <img src="./img-series-nuevo/Spiderman 2.jpg" alt="">
-                    <h4>
-                        <a href="./detail-movie.html">Spider-Man 2</a>
-                    </h4>
-                </li>
-                <li>
-                    <img src="./img-series-nuevo/Iron Man.jpg" alt="">
-                    <h4>
-                        <a href="./detail-movie.html">
-                            <Iron-Man></Iron-Man>
-                        </a>
-                    </h4>
-                </li>
-                <li>
-                    <img src="./img-series/daredevil-serie-tv-cartel.jpg" alt="">
-                    <a href="./detail-series.html">Daredevil</a>
-                </li>
-                <li>
-                    <img src="./img-series/poster-loki.jpg" alt="">
-                    <a href="./detail-series.html">Loki</a>
-                </li>
-            </ul>
+   <main>
 
-        </section>
+    <div>
+        <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
+    </div>
+    <section class="primerasection">
+        <article>
+            <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
+
+            <h3 class="tituoloprincipaldepelicula">
+                <a class="titulopelicula" href="./detail-movie.html">Venom</a>
+            </h3>
+        </article>
+        <article class="imagenpp">
+            <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg"
+                    alt=""> </a>
+            <h3 class="tituoloprincipaldepelicula">
+                <a class="titulopelicula" href="./detail-movie.html">Avengers endgame</a>
+            </h3>
+        </article>
+        <article>
+            <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
+            <h3 class="tituoloprincipaldepelicula">
+                <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
+            </h3>
+        </article>
+        <article>
+            <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
+            <h3 class="tituoloprincipaldepelicula">
+                <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
+            </h3>
+        </article>
+        <article>
+            <a href="./detail-movie.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
+            </a>
+            <h3 class="tituoloprincipaldepelicula">
+                <a class="titulopelicula" href="./detail-series.html">Loki</a>
+            </h3>
+        </article>
+    </section>
 
 
-
-    </main>
+   </main>
     <footer>
         <section>
             <ul type="none" class="footer">
