cambios css generos

--- a/genres.html
+++ b/genres.html
@@ -58,7 +58,7 @@
             </ul>
         </section>
         <section>
-            <h3>GENEROS DE SERIES</h3>
+            <h3 class="generosseries">GENEROS DE SERIES</h3>
             <ul>
                 <li>
                     <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
