Arreglos al index encuanto a informacion

--- a/favoritos.html
+++ b/favoritos.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bangers&family=Bebas+Neue&family=Commissioner:wght@100;500&family=Luckiest+Guy&display=swap"
+        rel="stylesheet">
 </head>
 </head>
 
@@ -42,49 +44,48 @@
             </li>
         </ul>
     </header>
-   <main>
+    <main>
+        <h2 class="tituloinicial">FAVORITOS</h2>
+        <h3 class="tituloinicial" >Agregados Recientemente:</h3>
+        
 
-    <div>
-        <H2 class="tituloinicial">PELICULAS POPULARES:</H2>
-    </div>
-    <section class="primerasection">
-        <article>
-            <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
+        <section class="primerasection">
+            <article>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt=""> </a>
 
-            <h3 class="tituoloprincipaldepelicula">
-                <a class="titulopelicula" href="./detail-movie.html">Venom</a>
-            </h3>
-        </article>
-        <article class="imagenpp">
-            <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg"
-                    alt=""> </a>
-            <h3 class="tituoloprincipaldepelicula">
-                <a class="titulopelicula" href="./detail-movie.html">Avengers endgame</a>
-            </h3>
-        </article>
-        <article>
-            <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
-            <h3 class="tituoloprincipaldepelicula">
-                <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
-            </h3>
-        </article>
-        <article>
-            <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
-            <h3 class="tituoloprincipaldepelicula">
-                <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
-            </h3>
-        </article>
-        <article>
-            <a href="./detail-movie.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
-            </a>
-            <h3 class="tituoloprincipaldepelicula">
-                <a class="titulopelicula" href="./detail-series.html">Loki</a>
-            </h3>
-        </article>
-    </section>
+                <h3 class="tituoloprincipaldepelicula">
+                    <a class="titulopelicula" href="./detail-movie.html">Venom</a>
+                </h3>
+            </article>
+            <article class="imagenpp">
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/AvengersEndgame.jpg" alt=""> </a>
+                <h3 class="tituoloprincipaldepelicula">
+                    <a class="titulopelicula" href="./detail-movie.html">Avengers endgame</a>
+                </h3>
+            </article>
+            <article>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
+                <h3 class="tituoloprincipaldepelicula">
+                    <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
+                </h3>
+            </article>
+            <article>
+                <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
+                <h3 class="tituoloprincipaldepelicula">
+                    <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
+                </h3>
+            </article>
+            <article>
+                <a href="./detail-movie.html"> <img class="imagen" src="./img-series/loki.jpg" alt="">
+                </a>
+                <h3 class="tituoloprincipaldepelicula">
+                    <a class="titulopelicula" href="./detail-series.html">Loki</a>
+                </h3>
+            </article>
+        </section>
 
 
-   </main>
+    </main>
     <footer>
         <section>
             <ul type="none" class="footer">
