--- a/genres.html
+++ b/genres.html
@@ -42,10 +42,10 @@
         </ul>
     </header>
     <main>
-        <h2>GENEROS</h2>
+        <h2 >GENEROS</h2>
         <section>
             <h3>GENEROS DE PELICULAS</h3>
-            <ul>
+            <ul type="none" class="flexboxgeneros"> 
                 <li>
                     <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
                 </li>
@@ -58,7 +58,7 @@
             </ul>
         </section>
         <section>
-            <h3 class="generosseries">GENEROS DE SERIES</h3>
+            <h3>GENEROS DE SERIES</h3>
             <ul>
                 <li>
                     <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
