--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers:EndGame</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 22/4/19 </p>
             </article>
             <article class="imagenpp">
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/batmanCabalero.png"
@@ -62,18 +63,21 @@
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Batman: The Dark Knight</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 17/7/2008 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/SuicideSquad.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">The Suicide Squad</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 5/08/2021 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="img/spiderman.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman: Far From Home</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 2/6/2019 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img/venom.jpg" alt="">
@@ -81,6 +85,7 @@
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Venom</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 4/10/2018 </p>
             </article>
         </section>
         <div>
@@ -92,30 +97,35 @@
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Titans</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 12/10/2018 </p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/daredevil.jpg"alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Daredevil</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 10/04/15 </p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png"alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Watchmen</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 20/10/2019 </p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/gotham.jpg" alt=""></a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Gotham</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 22/9/2014 </p>
             </article>
             <article>
                 <a href="./detail-series.html"> <img class="imagen" src="./img-series/loki.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-series.html">Loki</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 9/6/2021 </p>
             </article>
         </section>
         <div>
@@ -127,30 +137,35 @@
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Avengers: IninityWar</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 22/4/2019 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/deadPool.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">DeadPool</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 11/2/2016  </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/ironMan.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Iron Man</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 30/04/2008 </p>
             </article>
             <article>
                 <a href=""> <img class="imagen" src="./img/justiceLeague.png" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Justice League</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 16/11/2017 </p>
             </article>
             <article>
                 <a href="./detail-movie.html"> <img class="imagen" src="./img-series-nuevo/spiderman2.jpg" alt=""> </a>
                 <h3 class="tituoloprincipaldepelicula">
                     <a class="titulopelicula" href="./detail-movie.html">Spiderman 2</a>
                 </h3>
+                <p class="titulopelicula" >Estreno: 1/07/2004 </p>
             </article>
         </section>
     </main>
