agregando el css de generos

--- a/genres.html
+++ b/genres.html
@@ -42,9 +42,9 @@
         </ul>
     </header>
     <main>
-        <h2 >GENEROS</h2>
+        <h2 class="titulos12" >GENEROS</h2>
         <section>
-            <h3>GENEROS DE PELICULAS</h3>
+            <h3 class="titulos12">GENEROS DE PELICULAS</h3>
             <ul type="none" class="flexboxgeneros"> 
                 <li>
                     <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
@@ -58,8 +58,8 @@
             </ul>
         </section>
         <section>
-            <h3>GENEROS DE SERIES</h3>
-            <ul>
+            <h3 class="titulos12">GENEROS DE SERIES</h3>
+            <ul type="none" class="flexboxgeneros">
                 <li>
                     <a href="./detail-genres.html">CIENCIA FICCIÓN</a>
                 </li>
