--- a/detail-genres.html
+++ b/detail-genres.html
@@ -151,6 +151,16 @@
                 </li>
             </ul>
         </section>
+        <section>
+            <h3 class="tituloinicial" >CIENCIA FICCIÓN:</h3>
+            <ul type="none" class="primerasection">
+                <li>
+                    <a href="./detail-series.html"> <img class="imagen" src="./img-series/watchmen.png" alt=""> </a>
+                    <h4 class="tituoloprincipaldepelicula" >
+                        <a class="titulopelicula" href="./detail-series.html">Watchmen</h4>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
         <section>
